Minor formatting fixes

--- a/README.textile
+++ b/README.textile
@@ -12,15 +12,13 @@ First, you'll need a Consumer Key/Secret pair from Powershop. You can obtain one
 
 Then create a new client like so:
 
-<pre><code>    
-    require 'powershop'
+<pre><code>require 'powershop'
     powershop_client = Powershop::Client.new(YOUR_OAUTH_CONSUMER_KEY, YOUR_OAUTH_CONSUMER_SECRET)
 </code></pre>
 
 You can get a Request Token like this:
 
-<pre><code>    
-  request_token = powershop_client.request_token(:oauth_callback => "http://mysite.com/oauth/callback")
+<pre><code>request_token = powershop_client.request_token(:oauth_callback => "http://mysite.com/oauth/callback")
 </code></pre>
 
 NB: Powershop requires you specify an OAuth Callback URL for your request token. The library will default to "oob" (Out-Of-Band) if you don't specify a URL. Using "oob" means Powershop will provide your user with a verifier that they must manually copy and paste into your application (useful for Desktop applications or similar). Otherwise, the OAuth Callback URL is a URL your users will get redirected to along with an :oauth_verifier param once they've authenticated at Powershop.
@@ -29,38 +27,33 @@ Keep your Request Token/Secret pair around (the session is a good place in Rails
 
 You'll then need to redirect your user to the authentication URL for the request token. In Rails, this looks something like:
 
-<pre><code>    
-  redirect_to request_token.authorize_url
+<pre><code>redirect_to request_token.authorize_url
 </code></pre>
 
 Once they've authenticated at Powershop they'll get redirected to your callback with a verifier, and you can then exchange your Request Token for an Access Token like so:
 
-<pre><code>    
-  powershop_client.authorize_from_request(request_token.token, request_token.secret, params[:oauth_verifier])
+<pre><code>powershop_client.authorize_from_request(request_token.token, request_token.secret, params[:oauth_verifier])
 </code></pre>
 
 (Assuming that params is a hash of GET parameters, similar to Rails)
 
 You can then get an Access Token/Secret pair.
 
-<pre><code>    
-  powershop_client.access_token
+<pre><code>powershop_client.access_token
 </code></pre>
 
 You should store this in your Database or somewhere similarly persistent - you can use it later to authenticate in a single step:
 
-<pre><code>    
-    require 'powershop'
+<pre><code>require 'powershop'
     powershop_client = Powershop::Client.new(YOUR_OAUTH_CONSUMER_KEY, YOUR_OAUTH_CONSUMER_SECRET)
     powershop_client.authorize_from_access(ACCESS_TOKEN, ACCESS_SECRET)
 </code></pre>
 
 h2. Using the Library
 
-Most of the details of the library should be pretty self-explanatory.
+Most of the details of the library should be pretty self-explanatory. (If you're stuck, all the calls are tested in test/client_test.rb and Powershop provides a really useful PDF)
 
 <pre><code>  
-  
   # properties is the result of the "customer_details" API call, it returns an array of Powershop::Property objects
   powershop_client.properties
   
